# naur

./: .dockerignore  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  LICENSE  Makefile  Naur.slnx  NuGet.config  SECURITY.md  dependencies.yml  global.json  naur.code-workspace  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.aspire/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  trivy.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  epic.yml  spike.yml  task.yml  tech-debt.yml  user-story.yml
.github/actions/: shared.js
.github/matchers/: csc.json  dotnet-format.json  error.json  eslint-compact.json  eslint-stylish.json  golangci-lint.json  prettier.json  python.json  tsc.json
.github/scripts/: generate_report.py  save_report.sh
.github/workflows/: ci.yml  cleanup-preview.yml  clear-caches.yml  deploy-aspire.yml  deploy-netlify.yml  deploy-pr-netlify.yml  issue-auto-labeler.yml  pipeline-dotnet.yml  pipeline-e2e.yml  pipeline-go.yml  pipeline-node.yml  pipeline-python.yml  pipeline-ticket.yml  qa-checklist.yml  report.yml  security.yml  (+1 more)
scripts/: check-dependency-sync.py
services/moddingway/: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile.tests  Dockerfile.tests.dockerignore  Makefile  README.md  docker-compose.yml  main.py  postgres.yml  pyproject.toml  requirements-dev.txt  requirements.txt
services/moddingway/.github/: dependabot.yml
services/moddingway/.github/workflows/: publish.yaml  python-unittest.yml  pythonci-format-check.yml  scan-code.yml
services/moddingway/moddingway/: Dockerfile  bot.py  constants.py  enums.py  settings.py  util.py
services/moddingway/moddingway/commands/: announcement_commands.py  ban_commands.py  exile_commands.py  forum_commands.py  helper.py  note_commands.py  send_message_commands.py  slowmode_commands.py  strikes_command.py  warning_commands.py
services/moddingway/moddingway/database/: announcements_database.py  banforms_database.py  connection.py  exiles_database.py  notes_database.py  roles_database.py  strikes_database.py  users_database.py
services/moddingway/moddingway/database/models/: __init__.py  announcement.py  banform.py  exile.py  note.py  pending_exile.py  strike.py  user.py
services/moddingway/moddingway/events/: member_events.py
services/moddingway/moddingway/services/: announcement_service.py  ban_service.py  exile_service.py  note_service.py  send_message_service.py  slowmode_service.py  strike_service.py
services/moddingway/moddingway/workers/: __init__.py  autounexile.py  forum_automod.py  helper.py  strike_decrement.py
services/moddingway/moddingway_api/: Dockerfile  main.py
services/moddingway/moddingway_api/routes/: __init__.py  banforms_routes.py  banneduser_routes.py  mod_routes.py  user_routes.py
services/moddingway/moddingway_api/schemas/: ban_form_schema.py  banned_user_schema.py  mod_schema.py  user_schema.py
services/moddingway/moddingway_api/utils/: paginate.py
services/moddingway/postgres/: create_tables.sql  drop_all_tables.sql  seed_data.sql
services/moddingway/src/: constants.py  main.py  util.py
services/moddingway/src/commands/: ban_commands.py  exile_commands.py  helper.py  slowmode_commands.py  strikes_command.py
services/moddingway/src/database/: exiles_database.py  strikes_database.py  users_database.py
services/moddingway/src/database/models/: strike.py  user.py
services/moddingway/src/services/: ban_service.py  exile_service.py  slowmode_service.py  strike_service.py
services/moddingway/src/workers/: forum_automod.py
services/moddingway/tests/unit/: conftest.py  test_util.py
services/moddingway/tests/unit/services/: test_exile_service.py  test_strike_service.py
tests/moddingway/: pyproject.toml
tests/moddingway/unit/: conftest.py  test_util.py
tests/moddingway/unit/services/: test_exile_service.py  test_note_service.py  test_send_message_service.py  test_strike_service.py
(+370 files in other folders)
