[project]
name = "moddingway"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "discord==2.3.2",
    "pydantic==2.12.5",
    "psycopg2==2.9.11",
    "fastapi[standard]==0.129.0",
    "uvicorn==0.41.0",
    "fastapi-pagination==0.15.10",
    "python-dotenv==1.2.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.0",
    "ty==0.0.17",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "PL",  # pylint
    "RUF", # ruff-specific rules
    "T20", # flake8-print
]

ignore = [
    "E501",    # Line too long
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["moddingway", "moddingway_api"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty.environment]
python-version = "3.14"
root = ["../../", "."]  # repo root for tests/, service root for moddingway/

[tool.ty.src]
include = ["moddingway", "moddingway_api", "main.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
required-version = "==0.10.4"
