[project]
name = "moddingway-tests"
version = "0.0.1"
requires-python = ">=3.14"

[tool.pytest.ini_options]
pythonpath = ["../../services/moddingway"]
testpaths = ["unit"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Plugins and options
addopts = [
    "-p", "pytest_asyncio",
    "--cov=../../services/moddingway",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-branch",
    "-v",
]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

log_cli = false
log_cli_level = "INFO"

[tool.coverage.run]
branch = true
source = ["../../services/moddingway"]
relative_files = true

omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
skip_covered = false
skip_empty = true
precision = 2

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abstractproperty",
    "async def __aenter__",
    "async def __aexit__",
]

# Set minimum coverage threshold
fail_under = 0

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
